--- a/ProjectProposal.tex
+++ b/ProjectProposal.tex
@@ -37,7 +37,12 @@
 	Most risks are going to revolve around the security of our proposed system. This is solved by the implementation on ArcelorMittal's servers. ArcelorMittal has their own security team to ensure that the proposed system once moved to a production environment will be secure. In addition the data we are dealing with is not confidential.That being so, all code will be written in a secure manner, special attention will be paid to SQL queries, and SQLinjections.   
 	\subsection{Overview of System Models}
 	As the nature of this project is more Software oriented then hardware, developing models for system senors, actuators, interfaces or other principle level system components are not a main concern of Team 3. So as a result, no validation is needed. Similarly, issues involving control processes are not a concern. \\
-	However, Operating Systems at different interconnections distances is a concern, as our sponsor has a special requirement of no WIFI at certain times when the application is operating. So that is one issue that has to be accomodated. Another issue is going to be the storage on the Nexus 7 tablets. A usual tablet holds up to about 16GB of memory, so we need to make sure that our application is well within that limit.  \\
+	However, Operating Systems at different interconnections distances is a concern, as our sponsor has a special requirement of no WIFI at certain times when the application is operating. So that is one issue that has to be accomodated. Another issue is going to be the storage on the Nexus 7 tablets. A usual tablet holds up to about 16GB of memory, so we need to make sure that our application is well within that limit.  In addition our software is limited to run on the hardware specfics of the Nexus 7, which are ULP GeForce graphics card, CPU is detailed as Quad Core. There is 1 GB of RAM.   \\
+	
+	SOMEONE CITE THIS PLEASE http://www.gsmarena.com/asus_google_nexus_7-4850.php \\
+	
+	\subsection{Developmental Strategy}
+	Team three has picked a bottom up approach. We have chosen to implement the lower levels first. This will be easier for the team three because we can test the database communication first. In addition when we are trying to display data on the user interface, we have an implemented API to make that connection for testing. This is going to be easier then just hard coding data which will not be as efficient.  We also set up the development enviornments for testing. 
 
 \section{High Level Languages}\label{highlevel}
 
@@ -148,7 +153,7 @@
 	\subsection{Mobile Application}
 	Design team 3 will build a Mobile application for a tablet device which will allow a user to: download a database of safety equipment and locations to the mobile device to allow the user to operate with out access to the intranet, scan bar codes of locations and safety devices to allow the user to answer a seres of pass fail inspection questions, push question responses back to the database over the sponcers intranet.
 	\subsubsection{Mobil User Interface \& Experience}
-	Desing Team three has comitiond the world renowned user interface and user expereance designer, Trevor Sabo to design a front end for both our moble and web applications.\\
+	Design Team three has comitiond the world renowned user interface and user expereance designer, Trevor Sabo to design a front end for both our mobile and web applications.\\
 	\\
 	Design Team three will create a user interface and expereance(UI/UX) to guide the safety inspector through the proses of an inspection Figure~\ref{fig:login} the user is prompted to enter three payroll number so that the data reverent to that user can be sync to the noble device and so that the inspection results can be logged under the correct employees name.
 	If the users device is connected to the intranet will depress the button labeled sync in Figure~\ref{fig:splash} which will retreve the inspection locations and safety device information pertinent to the user.
@@ -167,7 +172,7 @@
 		\end{minipage}
 	\end{figure}
 	
-	\subsubsection{Bar code Scanning}
+	\subsubsection{Barcode Scanning}
 	
 	\subsubsection{Off-line Mode}
 	
